--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h3></h3>
    <h3></h3>  
    <a href="knitting.html" class="gombok">kötés</a>
-   <a href="/kocsi.html" class="gombok">kocsi</a>
-   <a href="/dashgrid.html" class="gombok">Dashboard Grid</a>
+   <a href="kocsi.html" class="gombok">kocsi</a>
+   <a href="dashgrid.html" class="gombok">Dashboard Grid</a>
 </body>
 </html>
