Apró módosítások a Dashboardon

--- a/dashgrid.html
+++ b/dashgrid.html
@@ -26,7 +26,7 @@
                 investors. Only trade with money you can afford to lose. Seek independent advice if necessary.
 <br>
 <ol>
-                Strategy Overview
+                <b>Strategy Overview</b>
 
                 <li>Type of Strategy:
                 This is a breakout pending order strategy, meaning it places automatic pending orders at breakout points
@@ -50,7 +50,7 @@
             </article>
         </h2>
         <section class="section1 padding">
-            <i class="fa-solid fa-arrow-down"></i>Deposits <br> <span class="section">1000</span> <br> <i
+            <i class="fa-solid fa-arrow-down"></i>Deposits <br> <span class="sectionminus">1000</span> <br> <i
                 class="fa-solid fa-arrow-up"></i>Witdrawals <br> <span class="section">-350</span>
         </section>
         <section class="section2 padding">
@@ -63,8 +63,8 @@
 
         </section>
         <section class="section4 padding">
-            <i class="fa-solid fa-triangle-exclamation"></i>Maximum drawdown <br> <span class="section">20</span> <br>
-            <i class="fa-solid fa-arrow-trend-down"></i>Current drawdown <br> <span class="section">5%</span>
+            <i class="fa-solid fa-triangle-exclamation"></i>Maximum drawdown <br> <span class="sectionminus">20</span> <br>
+            <i class="fa-solid fa-arrow-trend-down"></i>Current drawdown <br> <span class="sectionminus">5%</span>
         </section>
         <section class="section5 padding">
             <i class="fa-solid fa-chart-area"></i>Total pips <br> <span class="section">250</span> <br> <i
