A kép nem jelent meg

--- a/dashgrid.html
+++ b/dashgrid.html
@@ -353,7 +353,7 @@
 
         </p>
         <p class="chart">
-            <img class="chartkep" src="/kepek/chart.jpg" alt="">
+            <img class="chartkep" src="./kepek/chart.jpg" alt="">
 
 
         </p>
