--- a/dashgrid.html
+++ b/dashgrid.html
@@ -13,9 +13,9 @@
     <div class="grid">
         <header class="main">
             Logo
-            <i class="fa-solid fa-house"></i>Home
-            <i class="fa-solid fa-user-tie"></i>Brokers
-            <i class="fa-solid fa-graduation-cap"></i>Academy
+            <a class="sidelink" href="index.html"><i class="fa-solid fa-house"></i>Home</a>
+            <a class="sidelink" href="#"><i class="fa-solid fa-user-tie"></i>Brokers</a>
+            <a class="sidelink" href="#"><i class="fa-solid fa-graduation-cap"></i>Academy</a>
         </header>
         <h2 class="title">
             MCA100 - By Liu Kei | IC Markets (Real) | 1:500 | USD
@@ -72,9 +72,9 @@
         </section>
         <aside class="sidemenu">
             <ul>
-                <li><i class="fa-solid fa-chart-line"></i>Dashboard</li>
-                <li><i class="fa-solid fa-briefcase"></i>Portfolio</li>
-                <li><i class="fa-solid fa-user"></i>Accounts</li>
+                <li><a class="sidelink" href="#"><i class="fa-solid fa-chart-line"></i>Dashboard</a></li>
+                <li><a class="sidelink" href="#"><i class="fa-solid fa-briefcase"></i>Portfolio</a></li>
+                <li><a class="sidelink" href="#"><i class="fa-solid fa-user"></i>Accounts</a></li>
 
             </ul>
         </aside>
@@ -360,6 +360,9 @@
 
 
     </div>
+    <footer class="dashboardfooter">
+        Készítette: Lengyel Péter
+    </footer>
 </body>
 
 </html>
