--- a/dashgrid.html
+++ b/dashgrid.html
@@ -12,10 +12,10 @@
 <body class="dashbody">
     <div class="grid">
         <header class="main">
-            Logo
-            <a class="sidelink" href="index.html"><i class="fa-solid fa-house"></i>Home</a>
-            <a class="sidelink" href="#"><i class="fa-solid fa-user-tie"></i>Brokers</a>
-            <a class="sidelink" href="#"><i class="fa-solid fa-graduation-cap"></i>Academy</a>
+            <div class="dashlogo"><img src="/kepek/dashlogo.png" alt=""></div>
+            <a class="toplink" href="index.html"><i class="fa-solid fa-house"></i>Home</a>
+            <a class="toplink" href="#"><i class="fa-solid fa-user-tie"></i>Brokers</a>
+            <a class="toplink" href="#"><i class="fa-solid fa-graduation-cap"></i>Academy</a>
         </header>
         <h2 class="title">
             MCA100 - By Liu Kei | IC Markets (Real) | 1:500 | USD
@@ -46,24 +46,24 @@
                 </ol>
             </article>
             <article class="mtinfo">
-                Updated: 220 days ago Trading
+                Updated: 7 days ago
             </article>
         </h2>
         <section class="section1 padding">
-            <i class="fa-solid fa-arrow-down"></i>Deposits <br> <span class="sectionminus">1000</span> <br> <i
-                class="fa-solid fa-arrow-up"></i>Witdrawals <br> <span class="section">-350</span>
+            <i class="fa-solid fa-arrow-down"></i>Deposits <br> <span class="sectionminus">$1000</span> <br> <i
+                class="fa-solid fa-arrow-up"></i>Witdrawals <br> <span class="section">$-350</span>
         </section>
         <section class="section2 padding">
-            <i class="fa-solid fa-scale-balanced"></i>Balance <br> <span class="section">1500</span> <br> <i
-                class="fa-solid fa-chart-line"></i>Equity <br> <span class="section">1650</span>
+            <i class="fa-solid fa-scale-balanced"></i>Balance <br> <span class="section">$1500</span> <br> <i
+                class="fa-solid fa-chart-line"></i>Equity <br> <span class="section">$1650</span>
         </section>
         <section class="section3 padding">
-            <i class="fa-solid fa-sack-dollar"></i>Profit/loss <br> <span class="section">500</span> <br> <i
+            <i class="fa-solid fa-sack-dollar"></i>Profit/loss <br> <span class="section">$500</span> <br> <i
                 class="fa-solid fa-chart-simple"></i>Growth <br> <span class="section">200%</span>
 
         </section>
         <section class="section4 padding">
-            <i class="fa-solid fa-triangle-exclamation"></i>Maximum drawdown <br> <span class="sectionminus">20</span> <br>
+            <i class="fa-solid fa-triangle-exclamation"></i>Maximum drawdown <br> <span class="sectionminus">20%</span> <br>
             <i class="fa-solid fa-arrow-trend-down"></i>Current drawdown <br> <span class="sectionminus">5%</span>
         </section>
         <section class="section5 padding">
