dashboard finomhangolások - logo

--- a/dashgrid.html
+++ b/dashgrid.html
@@ -12,7 +12,7 @@
 <body class="dashbody">
     <div class="grid">
         <header class="main">
-            <div class="dashlogo"><img src="/kepek/dashlogo.png" alt=""></div>
+            <div class="dashlogo"><img src="./kepek/dashlogo.png" alt=""></div>
             <a class="toplink" href="index.html"><i class="fa-solid fa-house"></i>Home</a>
             <a class="toplink" href="#"><i class="fa-solid fa-user-tie"></i>Brokers</a>
             <a class="toplink" href="#"><i class="fa-solid fa-graduation-cap"></i>Academy</a>
