dashboard finomhangolások, index oldal gombjainak elrendezése, kocsi aloldal törlése

--- a/dashgrid.html
+++ b/dashgrid.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="author" content="Lengyel Péter">
+    <meta name="description" content="Forex dashboard template">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Document</title>
@@ -12,10 +14,10 @@
 <body class="dashbody">
     <div class="grid">
         <header class="main">
-            <div class="dashlogo"><img src="./kepek/dashlogo.png" alt=""></div>
-            <a class="toplink" href="index.html"><i class="fa-solid fa-house"></i>Home</a>
-            <a class="toplink" href="#"><i class="fa-solid fa-user-tie"></i>Brokers</a>
-            <a class="toplink" href="#"><i class="fa-solid fa-graduation-cap"></i>Academy</a>
+            <div><img src="./kepek/dashlogo.png" alt=""></div>
+            <a href="index.html"><i class="fa-solid fa-house"></i>Home</a>
+            <a href="#"><i class="fa-solid fa-user-tie"></i>Brokers</a>
+            <a href="#"><i class="fa-solid fa-graduation-cap"></i>Academy</a>
         </header>
         <h2 class="title">
             MCA100 - By Liu Kei | IC Markets (Real) | 1:500 | USD
