--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Csapatmunka</title>
+    <title>Kupi Anna, Lengyel Péter, Dömösi Dávid</title>
 </head>
 <body>
     <h3>Lengyel Péter</h3>
     <h3>Kupi Anna</h3>
     <h3></h3>
-   <h3></h3>  
+   <div>
    <a href="knitting.html" class="gombok">kötés</a>
-   <a href="kocsi.html" class="gombok">kocsi</a>
-   <a href="dashgrid.html" class="gombok">Dashboard Grid</a>
+   <a href="dashgrid.html" class="gombok">Dashboard</a>
+   </div> 
 </body>
 </html>
