ctrl+shift+f a html és css fájlokon

--- a/dashgrid.html
+++ b/dashgrid.html
@@ -26,25 +26,31 @@
 
                 Trading derivatives carries a high level of risk to your capital and may not be suitable for all
                 investors. Only trade with money you can afford to lose. Seek independent advice if necessary.
-<br>
-<ol>
-                <b>Strategy Overview</b>
+                <br>
+                <ol>
+                    <b>Strategy Overview</b>
 
-                <li>Type of Strategy:
-                This is a breakout pending order strategy, meaning it places automatic pending orders at breakout points
-                to capture significant market movements.</li>
+                    <li>Type of Strategy:
+                        This is a breakout pending order strategy, meaning it places automatic pending orders at
+                        breakout points
+                        to capture significant market movements.</li>
 
-                <li>Structure Explanation:
-                The strategy consists of three independent breakout mechanisms. Therefore, at the same valid breakout
-                level, there will be three sets of pending order programs operating simultaneously. This enhances both
-                the efficiency and flexibility of capturing breakouts.</li>
+                    <li>Structure Explanation:
+                        The strategy consists of three independent breakout mechanisms. Therefore, at the same valid
+                        breakout
+                        level, there will be three sets of pending order programs operating simultaneously. This
+                        enhances both
+                        the efficiency and flexibility of capturing breakouts.</li>
 
-                <li>Trading Frequency:
-                The trading frequency is medium-low, as trades are executed only when clear breakout signals appear.
-</li><li>
-                Objective:
-                The main objective of this strategy is to achieve stable profits while maintaining continuous risk
-                management.</li>
+                    <li>Trading Frequency:
+                        The trading frequency is medium-low, as trades are executed only when clear breakout signals
+                        appear.
+                    </li>
+                    <li>
+                        Objective:
+                        The main objective of this strategy is to achieve stable profits while maintaining continuous
+                        risk
+                        management.</li>
                 </ol>
             </article>
             <article class="mtinfo">
@@ -65,7 +71,8 @@
 
         </section>
         <section class="section4 padding">
-            <i class="fa-solid fa-triangle-exclamation"></i>Maximum drawdown <br> <span class="sectionminus">20%</span> <br>
+            <i class="fa-solid fa-triangle-exclamation"></i>Maximum drawdown <br> <span class="sectionminus">20%</span>
+            <br>
             <i class="fa-solid fa-arrow-trend-down"></i>Current drawdown <br> <span class="sectionminus">5%</span>
         </section>
         <section class="section5 padding">
