--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Kupi Anna, Lengyel Péter">
+    <meta name="description" content="Főoldal">
     <link rel="stylesheet" href="index.css">
-    <title>Kupi Anna, Lengyel Péter, Dömösi Dávid</title>
+    <title>Kupi Anna, Lengyel Péter</title>
 </head>
 
 <body>
