Added grid and font for knitting page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h3>Kupi Anna</h3>
     <h3></h3>
     <div>
-        <a href="knitting.html" class="gombok">kötés</a>
+        <a href="knitting.html" class="gombok">Kötés</a>
         <a href="dashgrid.html" class="gombok">Dashboard</a>
     </div>
 </body>
