--- a/knitting.html
+++ b/knitting.html
@@ -1,119 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="hu">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A kötés világa: technikák, minták és inspirációk kezdőknek és haladóknak.">
+  <meta name="keywords" content="kötés, kézimunka, fonal, minták, relax, hobbi">
+  <meta name="author" content="Kupi Anna">
   <title>Kötés - Kupi Anna</title>
   <link rel="stylesheet" href="index.css">
 </head>
 
-<body>
+<body class="knitting-page">
+  <nav>
+    <ul>
+      <li><a href="index.html">← Vissza a főoldalra</a></li>
+      <li><a href="#">Főoldal</a></li>
+      <li><a href="#">Kötés</a></li>
+      <li><a href="#">Hobbim</a></li>
+      <li><a href="#">Kapcsolat</a></li>
+    </ul>
+  </nav>
 
-  <div class="knitting-page">
-    <header>
-      <nav>
-        <ul>
-          <li><a href="index.html"> Vissza a főoldalra</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+  <main class="grid-layout">
 
-    <main class="content">
-      <section class="intro">
-        <h1>A kötés mint hobbi</h1>
-        <p>
+    
+    <div class="grid-item"><img src="kotes_kepek/knit1.jpg" alt="kötés kezdése"></div>
+    <div class="grid-item"><img src="kotes_kepek/knit3.jpg" alt="félkész kötés"></div>
+    <div class="grid-item"><img src="kotes_kepek/yarn3.jpg" alt="fonalak"></div>
 
-          A kötés népszerű hobbi, amely fizikai, mentális és érzelmi előnyökkel jár, mint például a stresszcsökkentés, a
-          finommotorika fejlesztése és a kreatív önkifejezés.
-          A kötés hagyományos, de modern időkben is egyre népszerűbb tevékenység, amely segít kikapcsolódni és
-          ellazulni.
-        </p>
-        <div class="image-row">
-          <img src="kotes_kepek/knit1.jpg" alt="Kotes kezdese">
-          <img src="kotes_kepek/knit3.jpg" alt="Felkesz kotes">
-          <img src="kotes_kepek/yarn3.jpg" alt="Fonalak">
-        </div>
+    
+   <div class="grid-content">
+      <h2>A kötés mint hobbi</h2>
+      <p>
+        A kötés nem csupán kézimunka, hanem életérzés: a fonal illata, a mozdulatok ritmusa és az alkotás öröme. 
+        Fejleszti a kézügyességet, megnyugtat, és valódi flow-élményt nyújt.
+      </p>
+      <ul>
+        <li><strong>Mentális előny:</strong> csökkenti a stresszt, növeli a koncentrációt.</li>
+        <li><strong>Kreatív kibontakozás:</strong> minden alkotás egyedi és személyes.</li>
+        <li><strong>Közösségi élmény:</strong> klubok, online csoportok, inspirációk.</li>
+      </ul>
+    </div>
 
-        <p>
-          <strong>Mentális előnyök: </strong>A kötés nyugtató hatású, segít csökkenteni a stresszt és a szorongást.
-          <strong>Fizikai előnyök: </strong>A kötés fejleszti a finommotoros készségeket és a kézügyességet.
-          <strong>Kreatív hobbi: </strong>Lehetővé teszi, hogy saját magad készítsd el a tárgyaidat, legyen szó
-          ruházatról,
-          lakásdekorációról vagy ajándékokról.
-          <strong>Közösség: </strong>Bár sokan egyedül kötnek, ez a hobbi egyben egy közösségépítő tevékenység is lehet,
-          hiszen a kötők és horgolók gyakran szerveznek összejöveteleket vagy online csoportokban osztják meg
-          egymással tapasztalataikat és alkotásaikat.
+   <div class="grid-content">
+      <h2>Kedvenc mintám: a Mackókötés</h2>
+      <p>
+        A mackókötés (angolul „Brioche”) vastag, bolyhos textúrát ad, ezért különösen népszerű téli daraboknál. 
+        Két színnel kötve lenyűgöző, 3D-s hatást kelt.
+      </p>
+      <h4>A 4 leggyakoribb mackókötés-technika</h4>
+      <ul>
+        <li>Alap mackókötés</li>
+        <li>Mackókötés a szem alá öltve</li>
+        <li>Hamis (fél) mackókötés</li>
+        <li>Hamis (fél) mackókötés a szem alá öltve</li>
+      </ul>
+      <p>
+        Ez a minta nemcsak esztétikus, hanem rendkívül meleg és tartós is — a sálaktól a takarókig mindenhez illik.
+      </p>
+    </div>
 
-        </p>
-        <section class="mackokotes">
-          <h2>Kedvenc Mintám, a 'Mackókötés'</h2>
-          <p>
-            A mackókötés (angolul Brioche-nak is hívják). Ez egy olyan kötéstechnika, ahol dupla szemeket használunk
-            tiszta,
-            jól látható csíkos minta eléréséhez. Ezzel a módszerrel tömöttebb, vastagabb eredményt érhetünk el, ami
-            remek sálak,
-            takarók, pulóverek elkészítéséhez.
-          </p>
+      <div class="grid-content">
+      <h2>A kötés: nyugalom és kreativitás</h2>
+      <p>
+        A kötés repetitív mozdulatai meditatív hatásúak: segítenek lelassulni, rendszerezni a gondolatokat 
+        és megteremteni a belső békét.
+      </p>
+      <p>
+        Sok kötő szerint a legjobb inspiráció egy csendes délután, egy bögre tea és egy doromboló cica az öledben.
+      </p>
+      <p class="closing-quote">
+        „A kötés nem csupán hobbi, hanem terápia, ahol minden öltés egy kis lépés a nyugalom felé.”
+      </p>
+    </div>
 
-          <div class="image-center">
-            <img src="kotes_kepek/mackokotes.jpg" alt="mackókötés minta">
-          </div>
+   
+    <div class="grid-item"><img src="kotes_kepek/knit2.jpg" alt="kötés folyamata"></div>
+    <div class="grid-item"><img src="kotes_kepek/knit4.jpg" alt="körkötés"></div>
+    <div class="grid-item"><img src="kotes_kepek/yarn2.avif" alt="gombolyagok"></div>
 
-          <p>
-            A mackókötésnek rengeteg változata létezik, nemcsak attól függően, hogy hány szemet hagyunk a csíkok között,
-            hanem attól is, milyen technikát használunk. Köthetjük két színnel is, ami különleges, ellentétes hatást ad
-            a két oldalán.
-          </p>
-        </section>
+  </main>
 
-        <section class="techniques">
-          <h4>A 4 leggyakoribb mackókötés technika</h4>
-          <ul>
-            <li>Mackókötés</li>
-            <li>Mackókötés a szem alá öltve</li>
-            <li>Hamis (fél) mackókötés</li>
-            <li>Hamis (fél) mackókötés a szem alá öltve</li>
-          </ul>
-
-          <div class="image-row">
-            <img src="kotes_kepek/knit2.jpg" alt="felkeszkotes">
-            <img src="kotes_kepek/knit4.jpg" alt="korkototes">
-            <img src="kotes_kepek/yarn2.avif" alt="fonalgombolyagok">
-          </div>
-
-          <p>
-            A hamis mackókötés kevesebb fonalat igényel, mivel minden második sorban kötjük, és a két oldala eltérő
-            mintát ad.
-          </p>
-        </section>
-        <section class="closing-section">
-          <h2>A kötés: nyugalom, kreativitás és egy kis dorombolás</h2>
-
-          <p class="closing-text">
-            A kötés nemcsak egy kézműves tevékenység, hanem egyfajta meditáció is.
-            Minden egyes öltés segít lelassulni, rendezni a gondolatokat,
-            és egy kis időre csak a jelen pillanatra figyelni.
-            Akár egyedül, akár egy doromboló társaságában kötünk,
-            ez a hobbi mindig visszahozza a belső békét.
-          </p>
-
-          <div class="image-center">
-            <img src="kotes_kepek/knitting relax.jpg" alt="Pihenő cica fonallal">
-          </div>
-
-          <p class="closing-quote">
-            „Egy gombolyag fonal, egy bögre tea és egy cica az öledben —
-            kell ennél több a tökéletes naphoz?”
-          </p>
-        </section>
-    </main>
-
-    <footer>
-      <p>Készítette: Kupi Anna</p>
-    </footer>
-  </div>
+  <footer>
+    <p>Készítette: Kupi Anna</p>
+  </footer>
 </body>
-
 </html>
