--- a/knitting.html
+++ b/knitting.html
@@ -13,8 +13,7 @@
 <body class="knitting-page">
   <nav>
     <ul>
-      <li><a href="index.html">← Vissza a főoldalra</a></li>
-      <li><a href="#">Főoldal</a></li>
+      <li><a href="index.html">Főoldal</a></li>
       <li><a href="#">Kötés</a></li>
       <li><a href="#">Hobbim</a></li>
       <li><a href="#">Kapcsolat</a></li>
