A nevem és a gombot elfelejtettem :3

--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <meta name="author" content="Kupi Anna, Lengyel Péter">
     <meta name="description" content="Főoldal">
     <link rel="stylesheet" href="index.css">
-    <title>Kupi Anna, Lengyel Péter</title>
+    <title>Kupi Anna, Lengyel Péter, Dömösi Dávid</title>
 </head>
 
 <body>
     <h3>Lengyel Péter</h3>
     <h3>Kupi Anna</h3>
-    <h3></h3>
+    <h3>Dömösi Dávid</h3>
     <div>
         <a href="knitting.html" class="gombok">Kötés</a>
         <a href="dashgrid.html" class="gombok">Dashboard</a>
+        <a href="brotato.html" class="gombok">Brotato</a>
     </div>
 </body>
 
