--- a/dashgrid.html
+++ b/dashgrid.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Forex dashboard template">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <title>Document</title>
+    <title>Dashboard - Lengyel Péter</title>
 </head>
 
 <body class="dashbody">
